# mcm-engine

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  mcm2-scaling-plan.md  mcm_v3_plan.md  mcmv2_test_plan.md  pyproject.toml  rules_categorization.md
.claude/: mcp-enforcement-state.json
.github/workflows/: ci.yml
deploy/helm/mcm-engine/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/helm/mcm-engine/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  postgres.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: capabilities.md  contract-versioning.md  counter-flush-policy.md  ranking-equivalence.md  releasing.md  scaling.md  schema-migration-v6-to-postgres.md  seam-inventory.md  source-of-authority-modes.md  watcher-cascade.md
examples/: .env.example  docker-compose.yml
examples/opencode/: mcp-enforcement.js
rules/deploy/: dns-rebinding-portless-host.md
scripts/: import_rules.py  push-to-ecr.sh  run-aws-conformance.sh  run-tofu-test.sh
src/mcm_engine/: __init__.py  authority.py  cli.py  config.py  consolidate.py  db.py  dedup.py  destructive.py  hierarchy.py  migrate.py  mirror.py  plugin.py  principal.py  registry.py  rules_links.py  sanitize.py  schema.py  scoring.py  server.py  tokens.py  tracker.py  transport.py  trust.py  wiring.py
src/mcm_engine/adapters/: __init__.py
src/mcm_engine/adapters/opensearch/: __init__.py  search.py
src/mcm_engine/adapters/postgres/: __init__.py  _concurrency.py  _pool.py  counters.py  search.py  storage.py
src/mcm_engine/adapters/redis/: __init__.py  counters.py
src/mcm_engine/admin/: __init__.py  app.py  service.py
src/mcm_engine/backends/: __init__.py
src/mcm_engine/files/: __init__.py  watcher.py
src/mcm_engine/hooks/: __init__.py  mcp_enforcement.py  session_start.py
src/mcm_engine/ingest/: __init__.py  adjudicate.py  markdown.py  python_ast.py  rulesift.py  text_dir.py
src/mcm_engine/testing/: __init__.py  conformance.py
src/mcm_engine/tools/: knowledge.py  relations.py  rules.py  search.py  session.py
terraform/aws/: README.md  app_runner.tf  ecr.tf  elasticache.tf  network.tf  opensearch.tf  rds.tf  variables.tf  versions.tf
terraform/aws/tests/: unit_app_runner.tftest.hcl  unit_elasticache.tftest.hcl  unit_network.tftest.hcl  unit_opensearch.tftest.hcl  unit_outputs.tftest.hcl  unit_rds.tftest.hcl
tests/: conftest.py  docker-compose.yml  test_adapter_lazy_imports.py  test_adapter_opensearch_search.py  test_adapter_postgres_counters.py  test_adapter_postgres_search.py  test_adapter_postgres_storage.py  test_adapter_redis_counters.py  test_adapter_sqlite_counters.py  test_adapter_sqlite_search.py  test_adapter_sqlite_session.py  test_adapter_sqlite_storage.py  test_add_rule_and_sync.py  test_adjudicate.py  test_adjudicate_auto.py  test_adjudicator_config.py  test_admin_app.py  test_admin_service.py  test_ambient_recall.py  test_ambient_transport.py  test_caller_threading.py  test_capabilities.py  test_cli_adjudicate.py  test_cli_ingest.py  test_cli_ingest_auto.py  test_cli_ingest_rules.py  test_cli_store_binding.py  test_cli_version.py  test_config_env_backends.py  test_config_strict.py  test_conflict.py  test_consolidate.py  test_correctness_axis.py  test_db.py  test_db_concurrency.py  test_dedup.py  test_default_wiring.py  test_embedded_shared_connection.py  test_export_mirror.py  test_handoff_candidates.py  (+60 more)
(+7 files in other folders)
